--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-*.class
-*.log
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Maven
+log/
+target/
+
+# App
+out/
+
+bin
